syntax = "proto3";

package project;

service ProjectSvc {
  rpc Create (CreateRequest) returns (CreateReply) {}
  rpc Delete (DeleteRequest) returns (DeleteReply) {}
}

message Project {
  int32  repo_id = 1;
  string owner_name = 2;
  string repo_name = 3;
  string token = 4;
}

message CreateRequest {
    Project project=1;
}

message CreateReply {
  Project project=1;
}
message DeleteRequest {
    int32 repo_id=1;
}

message DeleteReply {
  Project project=1;
}
